# lyceum-3

./: .env.example  .gitignore  BACKLOG.md  README.md  convertor.py  docker-compose.yml  duty.py  pyproject.toml  requirements.txt  run.bash  run.py
docs/: admin.md  database.md
scripts/sheets_extension/: Code.gs  README.md
settings/: instrumental_teacher_names.json  vocative_teacher_shortname.json
src/: bot_instance.py  main.py
src/db/: base.py  connector.py  database.py  db.py  schema.py
src/decorators/: __init__.py  fsm.py  validation.py
src/enums/: __init__.py  db_utype.py  depth_study.py  olympiad_stages.py  rarity_cards.py  teacher_type.py  user_type.py
src/exceptions/: __init__.py  validate.py
src/handlers/: __init__.py  all.py  base.py  common.py  register.py  stats.py  student.py  teacher.py
src/keyboards/: base.py  inline.py  reply.py
src/middlewares/: README.md  __init__.py  db.py  logger.py  role_access.py  spam.py
src/responses/: README.md  __init__.py  teacher_verify.py
src/service/: __init__.py  broadcast.py  convertor.py  duty.py  qualification.py  sheets_loader.py
src/settings/: calls.py  ukranian_weekname.json
src/sheets/: connector.py
src/states/: __init__.py  add_access.py  broker.py  card_list.py  create_olymp.py  register.py  student_olymp.py  teacher_type.py
src/utils/: __init__.py  classes_array.py  json.py  logger.py  parse_hub_keyboard.py  states.py  time_format_until.py  week_state.py
src/validators/: __init__.py  date.py  form.py  multiply_forms.py  student_name.py  teacher_name.py  telegram_user_id.py
(+163 files in other folders)
