[tool.poetry]
name = "lyceum-3"
version = "0.9.0"
description = "Telegram bot for Berezan Lyceum №3"
authors = ["Andriy <shostak303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
aiogram = "^3.20.0"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
gspread = "^6.2.1"
oauth2client = "^4.1.3"
google-api-python-client = "^2.170.0"
google-auth = "^2.40.2"
google-auth-oauthlib = "^1.2.2"
flask = "^3.1.1"
pyngrok = "^7.2.9"
sqlalchemy = "^2.0.42"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic = "^2.11.5"
loguru = "^0.7.3"
redis = "^6.4.0"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
